[gd_scene load_steps=20 format=4 uid="uid://dgy3vf0xjb874"]

[ext_resource type="Script" path="res://scripts/floor_map.gd" id="1_423c3"]
[ext_resource type="Texture2D" uid="uid://cqt0vr61f2bxi" path="res://art/floor_sheet.png" id="1_eg3gw"]
[ext_resource type="Texture2D" uid="uid://nernh4erw8au" path="res://art/table_sheet.png" id="2_7vs56"]
[ext_resource type="Texture2D" uid="uid://c7hy84ujceanw" path="res://art/wall_sheet.png" id="3_85vmw"]
[ext_resource type="Script" path="res://scripts/devices.gd" id="4_w6f35"]
[ext_resource type="Script" path="res://scripts/logger.gd" id="7_5mbbv"]
[ext_resource type="Curve2D" uid="uid://r8t7n7pqbnov" path="res://paths/to_misty.tres" id="7_ss1oq"]
[ext_resource type="PackedScene" uid="uid://brs2mnfeqqby3" path="res://scenes/log_display.tscn" id="8_y67md"]
[ext_resource type="Script" path="res://scripts/http_request_node.gd" id="9_wcwvr"]
[ext_resource type="Texture2D" uid="uid://dtlrn0pyxevuv" path="res://art/background.png" id="10_graqh"]
[ext_resource type="Script" path="res://scripts/background_light.gd" id="11_aijb1"]
[ext_resource type="Texture2D" uid="uid://cuaj5txrl38kg" path="res://art/background2.png" id="11_e0kwo"]
[ext_resource type="Script" path="res://scenes/clock.gd" id="12_yemy0"]
[ext_resource type="Script" path="res://scenes/http_get_lab_hours.gd" id="13_1la2h"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_dqocb"]
resource_name = "Floor Tiles"
texture = ExtResource("1_eg3gw")
texture_region_size = Vector2i(160, 120)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -4)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(0, -4)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(0, -4)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(0, -4)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, -4)
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, -4)
6:0/0 = 0
6:0/0/texture_origin = Vector2i(0, -4)
7:0/0 = 0
7:0/0/texture_origin = Vector2i(0, -4)
8:0/0 = 0
8:0/0/texture_origin = Vector2i(0, -4)
9:0/0 = 0
9:0/0/texture_origin = Vector2i(0, -4)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ai0tr"]
resource_name = "Table Sheet"
texture = ExtResource("2_7vs56")
texture_region_size = Vector2i(160, 120)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(8, 23)
0:0/0/z_index = 1
0:0/0/y_sort_origin = -20
1:0/0 = 0
1:0/0/texture_origin = Vector2i(10, 22)
1:0/0/z_index = 1
1:0/0/y_sort_origin = -20
2:0/0 = 0
2:0/0/texture_origin = Vector2i(19, 23)
2:0/0/z_index = 1
2:0/0/y_sort_origin = -20
0:1/0 = 0
0:1/0/texture_origin = Vector2i(7, 50)
0:1/0/z_index = 1
0:1/0/y_sort_origin = -10
1:1/0 = 0
1:1/0/texture_origin = Vector2i(-15, 35)
1:1/0/z_index = 1
3:1/0 = 0
3:1/0/texture_origin = Vector2i(12, 18)
3:1/0/z_index = 1
3:1/0/y_sort_origin = -40
3:0/0 = 0
3:0/0/texture_origin = Vector2i(-16, 11)
3:0/0/z_index = 1
3:0/0/y_sort_origin = -20
4:0/0 = 0
4:0/0/texture_origin = Vector2i(-14, 9)
4:0/0/z_index = 1
4:0/0/y_sort_origin = -20
1:2/animation_columns = 2
1:2/animation_separation = Vector2i(1, 1)
1:2/animation_frame_0/duration = 1.0
1:2/animation_frame_1/duration = 1.0
1:2/0 = 0
1:2/0/texture_origin = Vector2i(-15, 51)
1:2/0/z_index = 1
4:3/0 = 0
4:3/0/z_index = 2
5:0/0 = 0
5:0/0/texture_origin = Vector2i(-4, 5)
5:0/0/z_index = 1
5:0/0/y_sort_origin = -20
6:0/0 = 0
6:0/0/texture_origin = Vector2i(-16, 11)
6:0/0/z_index = 1
6:0/0/y_sort_origin = -20
4:2/0 = 0
4:2/0/z_index = 2
8:2/size_in_atlas = Vector2i(2, 1)
8:2/0 = 0
8:2/0/z_index = 1
8:0/size_in_atlas = Vector2i(2, 2)
8:0/0 = 0
10:0/0 = 0
10:0/0/z_index = 1
10:0/0/y_sort_origin = -40
2:1/0 = 0
2:1/0/texture_origin = Vector2i(-12, 18)
2:1/0/z_index = 1
2:1/0/y_sort_origin = -40
0:2/animation_columns = 2
0:2/animation_separation = Vector2i(1, 1)
0:2/animation_frame_0/duration = 1.0
0:2/animation_frame_1/duration = 1.0
0:2/0 = 0
0:2/0/texture_origin = Vector2i(7, 54)
0:2/0/z_index = 1
0:2/0/y_sort_origin = -20
1:3/animation_columns = 2
1:3/animation_separation = Vector2i(1, 1)
1:3/animation_frame_0/duration = 1.0
1:3/animation_frame_1/duration = 1.0
1:3/0 = 0
1:3/0/texture_origin = Vector2i(-15, 51)
1:3/0/z_index = 1
0:3/animation_columns = 2
0:3/animation_separation = Vector2i(1, 1)
0:3/animation_frame_0/duration = 1.0
0:3/animation_frame_1/duration = 1.0
0:3/0 = 0
0:3/0/texture_origin = Vector2i(7, 54)
0:3/0/z_index = 1
1:6/animation_columns = 2
1:6/animation_separation = Vector2i(1, 1)
1:6/animation_frame_0/duration = 1.0
1:6/animation_frame_1/duration = 1.0
1:6/0 = 0

[sub_resource type="TileSet" id="TileSet_ssnwc"]
tile_shape = 1
tile_size = Vector2i(160, 80)
sources/2 = SubResource("TileSetAtlasSource_ai0tr")
sources/1 = SubResource("TileSetAtlasSource_dqocb")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_31kon"]
resource_name = "Wall Sheet"
texture = ExtResource("3_85vmw")
texture_region_size = Vector2i(160, 80)
0:0/size_in_atlas = Vector2i(1, 3)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(-59, 50)
0:0/0/z_index = -1
1:0/size_in_atlas = Vector2i(1, 3)
1:0/0 = 0
1:0/0/texture_origin = Vector2i(59, 50)
1:0/0/z_index = -1
2:0/size_in_atlas = Vector2i(1, 3)
2:0/0 = 0
2:0/0/texture_origin = Vector2i(-59, 50)
3:0/size_in_atlas = Vector2i(1, 3)
3:0/0 = 0
3:0/0/texture_origin = Vector2i(59, 50)

[sub_resource type="TileSet" id="TileSet_lrubo"]
tile_shape = 1
tile_size = Vector2i(160, 80)
sources/0 = SubResource("TileSetAtlasSource_31kon")

[node name="Root" type="Node2D"]
y_sort_enabled = true
position = Vector2(0, 32)
script = ExtResource("1_423c3")
metadata/_edit_lock_ = true

[node name="Floor" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD//wYAAQAIAAAAAAD7/wAAAQAAAAAAAAADAP7/AQAGAAAAAAADAP//AQADAAAAAAADAAAAAQAHAAAAAAACAAEAAQAHAAAAAAACAAIAAQAHAAAAAAABAAMAAQAHAAAAAAABAAQAAQAHAAAAAAAAAAMAAQAJAAAAAAACAAAAAQAJAAAAAAACAP//AQAJAAAAAAABAAEAAQAJAAAAAAABAAIAAQAJAAAAAAAAAAQAAQAJAAAAAAD//wUAAQAJAAAAAAD//wQAAQAJAAAAAAD//wMAAQAJAAAAAAD+/wUAAQAIAAAAAAD+/wMAAQAJAAAAAAD+/wIAAQAJAAAAAAD9/wEAAQAJAAAAAAD8/wAAAQAIAAAAAAD7////AQAJAAAAAAD8//7/AQAJAAAAAAD8////AQAJAAAAAAD8//z/AQAFAAAAAAD8//3/AQAJAAAAAAD9//7/AQAJAAAAAAD9////AQAJAAAAAAD9/wAAAQAJAAAAAAD+/wAAAQAJAAAAAAD+/wEAAQAJAAAAAAD//wAAAQAJAAAAAAD//wIAAQAJAAAAAAD//wEAAQAJAAAAAAAAAAIAAQAJAAAAAAAAAAEAAQAJAAAAAAABAAAAAQAJAAAAAAABAP//AQAJAAAAAAACAP7/AQAJAAAAAAACAP3/AQAGAAAAAAACAPz/AQAGAAAAAAABAPv/AQAGAAAAAAABAPz/AQAJAAAAAAAAAP3/AQAJAAAAAAD///3/AQAJAAAAAAD///7/AQAJAAAAAAD/////AQAJAAAAAAAAAP7/AQAJAAAAAAABAP3/AQAJAAAAAAAAAPz/AQAJAAAAAAAAAPv/AQAJAAAAAAABAPr/AQAGAAAAAAABAP7/AQAJAAAAAAAAAP//AQAJAAAAAAAAAAAAAQAJAAAAAAD+////AQAJAAAAAAD9//3/AQAJAAAAAAD9//z/AQAJAAAAAAD9//r/AQAFAAAAAAD9//n/AQAFAAAAAAD+//j/AQAFAAAAAAD+//f/AQAFAAAAAAD+//n/AQAJAAAAAAD+//r/AQAJAAAAAAD///j/AQAJAAAAAAD///f/AQAGAAAAAAD///b/AQAEAAAAAAD7//7/AQACAAAAAAD7//3/AQAFAAAAAAD8//v/AQAFAAAAAAD+//z/AQAJAAAAAAD+//v/AQAJAAAAAAD///r/AQAJAAAAAAD///n/AQAJAAAAAAAAAPr/AQAJAAAAAAD///v/AQAJAAAAAAD///z/AQAJAAAAAAD+//3/AQAJAAAAAAAAAPj/AQAGAAAAAAAAAPn/AQAGAAAAAAAAAAUAAQAHAAAAAAAAAAYAAQAHAAAAAAD//wcAAQABAAAAAAD9//v/AQAJAAAAAAD+//7/AQAJAAAAAAD8/wEAAQAIAAAAAAD9/wIAAQAIAAAAAAD9/wMAAQAIAAAAAAD+/wQAAQAIAAAAAAA=")
tile_set = SubResource("TileSet_ssnwc")
metadata/_edit_lock_ = true

[node name="Walls" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAEAP7/AAADAAAAAAADAP3/AAADAAAAAAADAPz/AAADAAAAAAACAPv/AAADAAAAAAACAPr/AAADAAAAAAABAPn/AAADAAAAAAABAPj/AAADAAAAAAAAAPf/AAADAAAAAAAAAPb/AAADAAAAAAD///X/AAADAAAAAAD+//X/AAAAAAAAAAD+//b/AAAAAAAAAAD9//f/AAAAAAAAAAD9//j/AAAAAAAAAAD8//n/AAAAAAAAAAD8//r/AAAAAAAAAAD7//v/AAAAAAAAAAD7//z/AAAAAAAAAAD6//3/AAAAAAAAAAA=")
tile_set = SubResource("TileSet_lrubo")
metadata/_edit_lock_ = true

[node name="Tables" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAAAAAEAAgAAAAAAAAAAAAAAAgADAAAAAAADAP//AgAFAAAAAAADAAAAAgAEAAAAAAACAAEAAgAEAAAAAAACAAIAAgAEAAAAAAABAAMAAgADAAAAAAD+//z/AgAEAAAAAAAAAAUAAgAFAAAAAAAAAAYAAgAEAAAAAAD//wcAAgADAAAAAAD7//7/AgAGAAAAAAD8//v/AgABAAAAAAD7//3/AgAGAAAAAAD+//v/AgAEAAAAAAD///r/AgAEAAAAAAD///n/AgAEAAAAAAAAAPj/AgAFAAAAAAD///z/AgABAAAAAAD///v/AgABAAAAAAAAAPr/AgABAAAAAAAAAPn/AgACAAAAAAABAAAAAgABAAAAAAABAP//AgABAAAAAAACAP7/AgABAAAAAAACAP3/AgACAAAAAAAAAP//AgAEAAAAAAABAP7/AgAEAAAAAAABAP3/AgAEAAAAAAACAPz/AgAFAAAAAAD+//3/AgAAAAAAAAD9//3/AgAGAAAAAAD+//j/AgACAAEAAAD+//f/AgACAAEAAAD///f/AgADAAEAAAD///j/AgAKAAAAAAA=")
tile_set = SubResource("TileSet_ssnwc")
metadata/_edit_lock_ = true

[node name="Devices" type="TileMapLayer" parent="."]
y_sort_enabled = true
tile_map_data = PackedByteArray("AAD+//3/AgAAAAEAAAD///z/AgAAAAEAAAD///v/AgAAAAEAAAAAAPr/AgAAAAEAAAAAAPn/AgAAAAEAAAD+//z/AgABAAEAAAD+//v/AgABAAEAAAD///r/AgABAAEAAAD///n/AgABAAEAAAAAAPj/AgABAAEAAAAAAAEAAgAAAAEAAAABAAAAAgAAAAEAAAABAP//AgAAAAEAAAACAP7/AgAAAAEAAAACAP3/AgAAAAEAAAAAAAAAAgABAAEAAAAAAP//AgABAAEAAAABAP7/AgABAAEAAAABAP3/AgABAAEAAAACAPz/AgABAAEAAAACAAIAAgABAAEAAAACAAEAAgABAAEAAAADAAAAAgABAAEAAAADAP//AgABAAEAAAAAAAUAAgABAAEAAAAAAAYAAgABAAEAAAD//wcAAgABAAEAAAD9//3/AgABAAIAAAD7//7/AgABAAEAAAA=")
tile_set = SubResource("TileSet_ssnwc")
script = ExtResource("4_w6f35")
metadata/_edit_lock_ = true

[node name="HTTPRequestNode" type="HTTPRequest" parent="Devices"]
accept_gzip = false
script = ExtResource("9_wcwvr")

[node name="Viewport" type="Camera2D" parent="."]
position = Vector2(-32, -64)
metadata/_edit_lock_ = true

[node name="Debug_Path_Node" type="Path2D" parent="."]
z_index = 1
curve = ExtResource("7_ss1oq")

[node name="Update_Timer" type="Timer" parent="."]
autostart = true

[node name="Logger" type="Node" parent="."]
script = ExtResource("7_5mbbv")

[node name="LogDisplay" parent="." instance=ExtResource("8_y67md")]
z_index = 2
offset_left = -984.0
offset_top = 352.0
offset_right = -798.0
offset_bottom = 402.0
metadata/_edit_lock_ = true

[node name="BackgroundLight" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(-32, -64)
texture = ExtResource("10_graqh")
script = ExtResource("11_aijb1")
metadata/_edit_lock_ = true

[node name="BackgroundDark" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(-31, -63)
texture = ExtResource("11_e0kwo")
metadata/_edit_lock_ = true

[node name="Clock" type="RichTextLabel" parent="."]
offset_left = 209.0
offset_top = 239.0
offset_right = 920.0
offset_bottom = 469.0
bbcode_enabled = true
script = ExtResource("12_yemy0")
metadata/_edit_lock_ = true

[node name="HttpGetLabHours" type="HTTPRequest" parent="Clock"]
script = ExtResource("13_1la2h")

[connection signal="result_ready" from="Devices/HTTPRequestNode" to="Devices" method="_on_http_request_node_result_ready"]
[connection signal="timeout" from="Update_Timer" to="." method="_on_update_timer_timeout"]
[connection signal="timeout" from="Update_Timer" to="Devices" method="_on_update_timer_timeout"]
[connection signal="timeout" from="Update_Timer" to="Devices/HTTPRequestNode" method="_on_update_timer_timeout"]
[connection signal="timeout" from="Update_Timer" to="LogDisplay" method="_on_update_timer_timeout"]
[connection signal="new_log" from="Logger" to="LogDisplay" method="_on_logger_new_log"]
